--- a/src/views/signup.fxml
+++ b/src/views/signup.fxml
@@ -1,6 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.Pane?>
 
-
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" />
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.SignupController">
+   <children>
+      <TextField fx:id="RegUsuario" layoutX="326.0" layoutY="250.0" promptText="Nombre de usuario" />
+      <PasswordField fx:id="RegContra" layoutX="326.0" layoutY="300.0" promptText="Contraseña" />
+      <PasswordField fx:id="RegContra2" layoutX="326.0" layoutY="348.0" promptText="Repite contraseña" />
+      <Button fx:id="RegEntrar" layoutX="443.0" layoutY="407.0" mnemonicParsing="false" onAction="#register" text="Registrar" />
+      <Button fx:id="RegAtras" layoutX="295.0" layoutY="407.0" mnemonicParsing="false" onAction="#ChangeBack" text="Regresar" />
+      <Label layoutX="378.0" layoutY="105.0" text="Registro" />
+      <Label fx:id="RegErrors" layoutX="198.0" layoutY="129.0" prefHeight="111.0" prefWidth="404.0" />
+   </children>
+</Pane>
